--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -9,19 +9,18 @@ on:
 jobs:
   build:
 
-    runs-on: nixos/nix
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
 
     - name: configure
       run: ./configure
+      
+    - name: Install Nix
+      run: curl -L https://nixos.org/nix/install | sh
+      env:
+        NIX_PATH: nixpkgs=https://github.com/NixOS/nixpkgs-channels/archive/nixpkgs-unstable.tar.gz
 
-    - name: Install dependencies
-      run: make
-
-    - name: Run check
-      run: make check
-
-    - name: Run distcheck
-      run: make distcheck
+    - name: Activate Nix flakes
+      run: nix build
