--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -19,3 +19,7 @@ jobs:
       - uses: workflow/nix-shell-action@v3
         with:
           flakes: .
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3.1.2
+        with:
+          path: result/project.pdf
