--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -19,6 +19,8 @@ jobs:
       - uses: workflow/nix-shell-action@v3
         with:
           flakes: .
+          script: |
+            nix build
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.2
         with:
