--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -11,16 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Install Nix
-        uses: cachix/install-nix-action@v18
-        with:
-          extra_nix_config: |
-            access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
-      - uses: workflow/nix-shell-action@v3
-        with:
-          flakes: .
-          script: |
-            nix build
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
+      - run: nix build
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v3.1.2
         with:
